test/tests/stages/18_structures/valid/extra_credit/libraries/static_union_inits_client.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[274]:
  int
  identifier(strcmp)
  (
  char
  *
  identifier(s1)
  ,
  char
  *
  identifier(s2)
  )
  ;
  union
  identifier(simple)
  {
  int
  identifier(i)
  ;
  char
  identifier(c)
  ;
  double
  identifier(d)
  ;
  }
  ;
  extern
  union
  identifier(simple)
  identifier(s)
  ;
  int
  identifier(validate_simple)
  (
  void
  )
  ;
  union
  identifier(has_union)
  {
  union
  identifier(simple)
  identifier(u)
  ;
  char
  identifier(c)
  ;
  }
  ;
  extern
  union
  identifier(has_union)
  identifier(h)
  ;
  int
  identifier(validate_has_union)
  (
  void
  )
  ;
  struct
  identifier(has_union_array)
  {
  union
  identifier(has_union)
  identifier(union_array)
  [
  const int(4)
  ]
  ;
  char
  identifier(c)
  ;
  union
  identifier(simple)
  identifier(s)
  ;
  }
  ;
  extern
  struct
  identifier(has_union_array)
  identifier(my_struct)
  ;
  int
  identifier(validate_has_union_array)
  (
  void
  )
  ;
  extern
  union
  identifier(has_union)
  identifier(all_zeros)
  ;
  int
  identifier(validate_uninitialized)
  (
  void
  )
  ;
  union
  identifier(with_padding)
  {
  char
  identifier(arr)
  [
  const int(13)
  ]
  ;
  long
  identifier(l)
  ;
  }
  ;
  extern
  union
  identifier(with_padding)
  identifier(padded_union_array)
  [
  const int(3)
  ]
  ;
  int
  identifier(validate_padded_union_array)
  (
  void
  )
  ;
  union
  identifier(simple)
  identifier(s)
  =
  {
  const int(217)
  }
  ;
  union
  identifier(has_union)
  identifier(h)
  =
  {
  {
  const int(77)
  }
  }
  ;
  struct
  identifier(has_union_array)
  identifier(my_struct)
  =
  {
  {
  {
  {
  const char('a')
  }
  }
  ,
  {
  {
  const char('b')
  }
  }
  ,
  {
  {
  const char('c')
  }
  }
  }
  ,
  const char('#')
  ,
  {
  const char('!')
  }
  }
  ;
  union
  identifier(has_union)
  identifier(all_zeros)
  ;
  union
  identifier(with_padding)
  identifier(padded_union_array)
  [
  const int(3)
  ]
  =
  {
  {
  string literal("first string")
  }
  ,
  {
  string literal("string #2")
  }
  ,
  {
  string literal("string #3")
  }
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  if
  (
  !
  identifier(validate_simple)
  (
  )
  )
  {
  return
  const int(1)
  ;
  }
  if
  (
  !
  identifier(validate_has_union)
  (
  )
  )
  {
  return
  const int(2)
  ;
  }
  if
  (
  !
  identifier(validate_has_union_array)
  (
  )
  )
  {
  return
  const int(3)
  ;
  }
  if
  (
  !
  identifier(validate_uninitialized)
  (
  )
  )
  {
  return
  const int(4)
  ;
  }
  if
  (
  !
  identifier(validate_padded_union_array)
  (
  )
  )
  {
  return
  const int(5)
  ;
  }
  return
  const int(0)
  ;
  }
