test/tests/stages/18_structures/invalid_types/incompatible_types/struct_pointer_param_mismatch.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[53]:
  struct
  identifier(s1)
  {
  int
  identifier(a)
  ;
  }
  ;
  struct
  identifier(s2)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(get_a)
  (
  struct
  identifier(s1)
  *
  identifier(ptr)
  )
  {
  return
  identifier(ptr)
  ->
  identifier(a)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s2)
  identifier(arg)
  =
  {
  const int(1)
  }
  ;
  return
  identifier(get_a)
  (
  &
  identifier(arg)
  )
  ;
  }
